Share the autofill constants between the password generation and autofill views.

As a nice side effect, the issue with transparency in the generation prompt is
fixed.

Bug: 864978
Change-Id: I58d4d04053297dda1b2a4aa5cfce381b0062eadd
Reviewed-on: https://chromium-review.googlesource.com/1141962
Commit-Queue: Vasilii Sukhanov <vasilii@chromium.org>
Reviewed-by: Tommy Martino <tmartino@chromium.org>
Reviewed-by: Fabio Tirelo <ftirelo@chromium.org>
Cr-Commit-Position: refs/heads/master@{#576503}
Former-commit-id: 1c9d329c0c2d3bba5af886573813b433bcb647f3